Fixed an issue causing invisible clocks to spawn. Reworked background image generation again

--- a/tilegame/css/game.css
+++ b/tilegame/css/game.css
@@ -6,18 +6,20 @@
   max-height: 100%;
 }
 
-.supergrid {
-  width: min(min(95vh, 75%), 600px);
-  height: min-content;
-  margin: 0;
-  padding: 0;
-}
+.level-1 { background-image: url(/images/tilegame/grass.png); }
+.level-2 { background-image: url(/images/tilegame/dirt.png); }
+.level-3 { background-image: url(/images/tilegame/ice.png); }
+.level-4 { background-image: url(/images/tilegame/rock.png); }
+.level-5 { background-image: url(/images/tilegame/space.png); }
 
 .grid {
+  width: min(min(95vh, 75%), 600px);
+  height: min-content;
   display: grid;
   grid-template-columns: repeat(12, 8.333%);
   gap: 0px;
-  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .plate {
@@ -48,7 +50,7 @@
     height: 98vh;
   }
   
-  .supergrid {
+  .grid {
     width: 90%;
     max-width: 100vw;
     max-height: 100vh;
